# sayane

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  README.ja.md  README.md  README_ja.md  pyproject.toml  xxx.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_design.md  feature_request.md
.github/workflows/: ci.yml  dependency-audit.yml  extension-e2e.yml  extension-real-dom-e2e.yml  publish-pypi.yml
docs/: acceptance-manual-only.md  acceptance-spec.md  architecture.md  authorization-layer.md  bridge-manual.md  canonical-terminology.md  ci.md  cli-acceptance-test.md  cli-chrome-extension.md  cli-manual.md  commercial-edition.md  confidentiality-policy-schema.md  context-layering-design.md  context-portability-a1-chatgpt-baseline.md  context-portability-a2-chatgpt-roundtrip.md  context-portability-a2b-chatgpt-claude-roundtrip.md  context-portability-claude-baseline.md  context-portability-import.md  development-principles.md  dogfood-walkthrough.md  evaluation-lineage.md  evaluation-manual.md  extension-acceptance-test.md  extension-e2e.md  extension-i18n-coding-principles.md  extension-manual.md  extension-real-dom-e2e.md  extraction-pipeline.md  formation-layer-policy.md  getting-started.md  index.md  install.md  linux-systemd-user.md  macos-launchagent.md  mcp-integration.md  mcp-manual.md  migration-omomuki-to-sayane.md  mvp-scope.md  phase-3-closure.md  profile-ir.md  (+15 more)
examples/: README.md  judge.yaml.example
exports/: chatgpt-baseline-context.md
extension/: .gitignore  README.md  diff.html  manifest.json  options.html  package-lock.json  package.json  playwright.config.ts  popup.html  sidepanel.html  tsconfig.json
schemas/: README.md  omomuki-profile.schema.json  prompt-ir.schema.json  sayane-confidentiality-policy.schema.json  sayane-profile.schema.json
scripts/: build-macos-app-bundle.sh  build-wheel.sh  check-install-local.sh  check-macos-app-preview.sh  check-macos-app-release-install.sh  check-macos-routine-smoke.sh  check-resident-app-api-surfaces.sh  check-resident-app-release-smoke.sh  check-resident-app-ui-session.sh  close-completed-issues.sh  complexity_report.py  dogfood-capture-eval.sh  install-macos-app-release.sh  install-macos-app.sh  install.ps1  install.sh  notarize-macos-app.sh  post-release-v1.0.13.sh  post-release-v1.0.14-post1.sh  post-release-v1.0.14.sh  post-release-v1.0.2.sh  post-release-v1.0.3.sh  prepare-macos-release-artifacts.sh  publish-github-release-v1.0.1.sh  publish-github-release-v1.0.13.sh  publish-github-release-v1.0.14-post1.sh  publish-github-release-v1.0.14.sh  publish-github-release-v1.0.2.sh  refresh-macos-app.sh  release-v1.0.1-notes.md  release-v1.0.13-notes.md  release-v1.0.14-notes.md  release-v1.0.14-post1-notes.md  release-v1.0.2-notes.md  release-v1.0.3-notes.md  run-app-local.sh  run-macos-app-preview.sh  sign-macos-app.sh  uninstall-macos-app.sh  verify-macos-app-install.sh
tests/: __init__.py  conftest.py  test_a2_roundtrip.py  test_acceptance_cli.py  test_acceptance_coverage.py  test_adapters.py  test_audit_export.py  test_audit_trail.py  test_authorization_layer.py  test_bridge_api.py  test_bridge_auth_dependency.py  test_build_info.py  test_builder.py  test_bundle_provenance.py  test_candidate_cli.py  test_candidate_flow.py  test_canonical_terms.py  test_capture_all_existing.py  test_capture_classify_sections.py  test_capture_cli.py  test_capture_input_design.py  test_capture_quality.py  test_claude_baseline_source.py  test_cli.py  test_cli_help.py  test_cli_i18n.py  test_cli_locale_resolve.py  test_cli_plugins.py  test_confidentiality_policy_schema.py  test_context_index.py  test_critical_merge.py  test_decision_diff.py  test_dependency_audit.py  test_evaluation_notes.py  test_export.py  test_export_chatgpt_refined.py  test_export_golden.py  test_export_noise_filter.py  test_export_package.py  test_formation_export_guard.py  (+129 more)
tools/: dependency_audit.py  test_ast_probe.py
(+722 files in other folders)
