[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omomuki"
version = "0.5.9"
description = "Local-first persona and context portability for cross-LLM collaboration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Omomuki Contributors" }]
keywords = ["llm", "persona", "prompt", "local-first", "mcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "typer>=0.15",
    "uvicorn[standard]>=0.32",
    "mcp>=1.6",
]

[project.scripts]
omomuki = "omomuki.cli.main:main"

[project.entry-points."omomuki.storage_backends"]
filesystem = "omomuki.storage.backends.filesystem:create_backend"

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "jsonschema>=4.23",
    "pytest>=8.3",
    "ruff>=0.9",
]

[project.urls]
Documentation = "https://github.com/Omomuki/omomuki/tree/main/docs"
Repository = "https://github.com/Omomuki/omomuki"

[tool.hatch.build.targets.wheel]
packages = ["src/omomuki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
