[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sayane"
version = "1.0.5"
description = "Local-first persona and context portability for cross-LLM collaboration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Sayane Contributors" }]
keywords = ["llm", "persona", "prompt", "local-first", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "typer>=0.15",
    "uvicorn[standard]>=0.32",
    "mcp>=1.6",
]

[project.scripts]
sayane = "sayane.cli.main:main"

[project.entry-points."sayane.storage_backends"]
filesystem = "sayane.storage.backends.filesystem:create_backend"

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "jsonschema>=4.23",
    "pytest>=8.3",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/zyx-corporation/sayane"
Documentation = "https://github.com/zyx-corporation/sayane/tree/main/docs"
Repository = "https://github.com/zyx-corporation/sayane"
Issues = "https://github.com/zyx-corporation/sayane/issues"
Changelog = "https://github.com/zyx-corporation/sayane/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sayane"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "sayane/bundled_schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "src/sayane/bridge/**",
    "src/sayane/cli/**",
    "src/sayane/core/**",
    "src/sayane/evaluators/**",
    "src/sayane/lineage/**",
    "src/sayane/storage/**",
    "tests/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
